FIXME: Ver se a scrollbar não quebra durante troca de páginas, por enquanto a default será usada

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -58,8 +58,9 @@ body::before {
   z-index: 1;
 }
 
+/* FIXME: Ver se a scrollbar não quebra durante troca de páginas, por enquanto a default será usada */
 /* scroll bar mais discreta */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 6px;
 }
 
@@ -70,7 +71,7 @@ body::before {
 ::-webkit-scrollbar-thumb {
   background: var(--border-hover);
   border-radius: 3px;
-}
+} */
 
 /* card padrão */
 .ch-card {
